--- a/docs/index.css
+++ b/docs/index.css
@@ -1,7 +1,7 @@
 body {
-  background-color: #1f1c25;
+  background-color: #000;
   color: #f0e6d1;
-  font-family: "Luminari", "Georgia", serif;
+  font-family: "Cascadia Code", "Fira Code", "Menlo", monospace;
   line-height: 1.7;
   margin: 0;
   padding: 20px;
@@ -95,6 +95,8 @@ blockquote {
 img {
   display: block;
   /* margin: 0 auto; */
+  margin-left: auto;
+  margin-right: auto;
   max-width: 100%;
   height: auto;
   border-radius: 6px;
