--- a/docs/index.css
+++ b/docs/index.css
@@ -30,6 +30,11 @@ h1 {
   font-size: 2.5em;
 }
 
+/* Used for the first h1 header within a page */
+.center-title {
+  text-align: center;
+}
+
 h2 {
   font-size: 2em;
 }
